# fy

./: .gitignore  Cargo.toml  README.md  install_on_local.sh
.github/workflows/: rust.yml
src/: main.rs  objs.rs  result_example.json
