[package]
name = "fy"
version = "0.1.0"
authors = ["abstractsuperman <abstractsuperman@126.com>"]
edition = "2018"
description = "fy, abbreviation of fanyi, is a translation cli tool written by rust."

[dependencies]
colored = "1.9"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
log = "0.4"
env_logger = "0.7"

[profile.dev]
opt-level = 0

[profile.release]
# https://github.com/johnthagen/min-sized-rust
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic